# backend-recipes

fastapi-gen/: .gitignore  README.md  pyproject.toml
fastapi-gen/src/fastapi_gen/: __init__.py  cli.py
fastapi-gen/src/fastapi_gen/services/: __init__.py  google_oauth.py  vercel.py
fastapi-gen/src/fastapi_gen/templates/base/: README.md.j2  pyproject.toml.j2  vercel_build.sh
fastapi-gen/src/fastapi_gen/templates/base/src/: __init__.py  index.py  main.py
fastapi-gen/src/fastapi_gen/templates/base/src/infrastructure/api/routes/: __init__.py
fastapi-gen/src/fastapi_gen/templates/base/src/infrastructure/api/v1/endpoints/: health.py
fastapi-gen/src/fastapi_gen/templates/base/src/{{project_name}}/config/: __init__.py
fastapi-gen/src/fastapi_gen/templates/base/tests/: test_main.py
fastapi-gen/src/fastapi_gen/utils/: __init__.py
fastapi-gen/tests/: test_cli.py
